--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WB 跨境定价计算器</title>
+    <title>俄罗斯定价器</title>
     <!-- 引入 React 核心库 -->
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -157,8 +157,8 @@
                             <div className="flex items-center gap-3">
                                 <Icon name="calculator" className="w-8 h-8" />
                                 <div>
-                                    <h1 className="text-2xl font-bold tracking-tight">WB 跨境定价计算器</h1>
-                                    <div className="text-fuchsia-200 text-xs">Wildberries 俄罗斯专供版</div>
+                                    <h1 className="text-2xl font-bold tracking-tight">俄罗斯定价器</h1>
+                                    <div className="text-fuchsia-200 text-xs">Wildberries Robin专供版</div>
                                 </div>
                             </div>
                             <div className="flex items-center gap-4 bg-fuchsia-900/40 px-5 py-3 rounded-lg backdrop-blur-sm border border-fuchsia-600/30">
@@ -298,4 +298,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
