--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <Icon name="calculator" className="w-8 h-8" />
                                 <div>
                                     <h1 className="text-2xl font-bold tracking-tight">俄罗斯定价器</h1>
-                                    <div className="text-fuchsia-200 text-xs">Wildberries Robin专供版</div>
+                                    <div className="text-fuchsia-200 text-xs">Robin专供版</div>
                                 </div>
                             </div>
                             <div className="flex items-center gap-4 bg-fuchsia-900/40 px-5 py-3 rounded-lg backdrop-blur-sm border border-fuchsia-600/30">
@@ -300,3 +300,4 @@
 </body>
 
 </html>
+
