--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             </div>
 
                             <div className="bg-white p-5 rounded-xl shadow-sm border border-slate-200 text-sm space-y-3">
-                                <h3 className="font-semibold text-slate-700 mb-4 text-xs uppercase tracking-widest">每单资金流向 (CNY折算)</h3>
+                                <h3 className="font-semibold text-slate-700 mb-4 text-xs uppercase tracking-widest">费用流向 (CNY折算)</h3>
                                 <CostRow label="采购与国内运费" value={results.totalProductCostCNY} color="bg-blue-600" />
                                 <CostRow label="头程物流运费" value={results.logisticsCNY} color="bg-teal-500" />
                                 <CostRow label="退货风险损耗" value={results.returnLossCNY} color="bg-red-400" isAlert />
@@ -300,4 +300,5 @@
 </body>
 
 </html>
+
 
